# autonomous-search-and-rescue

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: basic-checks.yml  uv-checks.yml
config/: fastdds_udp_only.xml  gazebo_gui_record.config  local_env.example.sh  platform_cluster.sh  platform_mac.sh  platform_win.sh
docs/: ERRORS_AND_FIXES.md  INSTALLATION.md  START_HERE.md  architecture.md  architecture_diagrams.md  architecture_questions_and_decisions.md  behavior_tree.md  detection.md  exploration_benchmark.md  full_architecture.md  interfaces.md  parcours.md  project.md  propositions_L17_ameliorations.md  real_simulation_smoke_test.md  ros2_package_structure.md  run_scripts.md  running_on_wsl.md  simulation_setup.md  team.md  team_roles.md  testing_guide.md  validation.md
docs/meeting_notes/: L13.md
docs/soutenance/: compile_presentation10m.sh  compile_publication.sh  compile_rapport10p.sh  install_compile_latex.md  presentation10m.tex  presentation10m_FR.tex  publication_EN.tex  publication_FR.tex  rapport10p_EN.tex  rapport10p_FR.tex
experiments/: summary.md
experiments/greedy_run1/: coverage_over_time.csv  run_summary.json
experiments/greedy_run2/: coverage_over_time.csv  run_status.json  run_summary.json  victims_detected.csv
experiments/greedy_run3/: coverage_over_time.csv  run_summary.json
experiments/info_gain_run1/: coverage_over_time.csv  run_summary.json  victims_detected.csv
experiments/info_gain_run2/: coverage_over_time.csv  run_status.json  run_summary.json  victims_detected.csv
experiments/info_gain_run3/: coverage_over_time.csv  run_status.json  run_summary.json  victims_detected.csv
results/: README.md
ros2_ws/: team_b.repos
ros2_ws/src/ia712_search_rescue/: package.xml  setup.cfg  setup.py
ros2_ws/src/ia712_search_rescue/config/: nav2_params.yaml  slam_params.yaml
ros2_ws/src/ia712_search_rescue/ia712_search_rescue/mocks/: mock_coverage_publisher.py  mock_map_publisher.py
ros2_ws/src/ia712_search_rescue/ia712_search_rescue/results/: coverage_evaluator_node.py  result_exporter_node.py  rviz_marker_node.py
ros2_ws/src/ia712_search_rescue/launch/: bringup.launch.py  bt.launch.py  detection.launch.py  exploration.launch.py  mock_system.launch.py  navigation.launch.py  results.launch.py  simulation.launch.py
ros2_ws/src/ia712_search_rescue/resource/: ia712_search_rescue
ros2_ws/src/ia712_search_rescue/rviz/: project_view.rviz
ros2_ws/src/ia712_search_rescue/test_data/: fake_victims_detected.csv
ros2_ws/src/ia712_search_rescue/worlds/: disaster_world.world  test_world_small.world
ros2_ws/src/rescue_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/rescue_bringup/config/: apriltag_tags.yaml  slam_params.yaml
ros2_ws/src/rescue_bringup/launch/: bringup.launch.py  bringup_tb4.launch.py  demo.launch.py  exploration.launch.py
ros2_ws/src/rescue_decision/: CMakeLists.txt  package.xml
ros2_ws/src/rescue_decision/bt_xml/: mission.xml
ros2_ws/src/rescue_decision/launch/: bt_mission.launch.py
ros2_ws/src/rescue_decision/src/: bt_runner.cpp
ros2_ws/src/rescue_robot/: package.xml  setup.py
ros2_ws/src/rescue_robot/behavior_trees/: navigate_to_pose_simple.xml  search_and_rescue_bt.xml
ros2_ws/src/rescue_robot/config/: bt_params.yaml  detector_params.yaml  explorer_params.yaml  nav2_params.yaml  nav2_params_tb4.yaml  results_params.yaml  simulation_params.yaml  slam_params.yaml  slam_params_tb4.yaml  waypoints.yaml  waypoints_tb4_maze.yaml  waypoints_tb4_rescue_arena.yaml  waypoints_tb4_warehouse.yaml
ros2_ws/src/rescue_robot/launch/: bt.launch.py  detection.launch.py  exploration.launch.py  mock_system.launch.py  navigation.launch.py  navigation_tb4.launch.py  results.launch.py  simulation.launch.py  victim_registry.launch.py  waypoint.launch.py
ros2_ws/src/rescue_robot/rescue_robot/bt/: bt_supervisor_node.py
ros2_ws/src/rescue_robot/rescue_robot/detection/: victim_detector_node.py  victim_registry_node.py
ros2_ws/src/rescue_robot/rescue_robot/exploration/: frontier_explorer_node.py  frontier_search.py
ros2_ws/src/rescue_robot/rescue_robot/mocks/: mock_coverage_publisher.py  mock_map_publisher.py  mock_victim_publisher.py
ros2_ws/src/rescue_robot/rescue_robot/navigation/: inspection_node.py  inspection_planner.py  waypoint_follower_node.py
ros2_ws/src/rescue_robot/rescue_robot/results/: coverage_evaluator_node.py  result_exporter_node.py  rviz_marker_node.py
ros2_ws/src/rescue_robot/rescue_robot/utils/: cmd_vel_relay_node.py  node_runner.py  scan_throttle_node.py  tf_relay_node.py  topic_relay.py
ros2_ws/src/rescue_robot/rviz/: project_view.rviz
ros2_ws/src/rescue_robot/test_data/: fake_coverage_over_time.csv
ros2_ws/src/team_b_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/team_b_bringup/config/: apriltag_tags.yaml  slam_params.yaml
ros2_ws/src/team_b_bringup/launch/: bringup.launch.py  exploration.launch.py
ros2_ws/src/team_b_bringup/rviz/: sar.rviz
ros2_ws/src/team_b_decision/: CMakeLists.txt  package.xml
ros2_ws/src/team_b_metrics/: package.xml  setup.cfg  setup.py
ros2_ws/src/team_b_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/team_b_world/: CMakeLists.txt  package.xml
ros2_ws/src/team_b_world/worlds/: README.md
scripts/: annotate_map.py  generate_apriltag_models.py  generate_inspection_waypoints.py  generate_rescue_arena.py  generate_run_summary.py  make_mission_video.py  make_report_figures.py  plot_benchmark.py  plot_coverage.py  run.sh
scripts/sh/: _common.sh  _gazebo_graphics.sh  _platform.sh  _turtlebot3_overlay.sh  _turtlebot4_helper.sh  build.sh  check_camera_topics.sh  check_turtlebot3.sh  check_turtlebot4.sh  clean.sh  doctor_env.sh  install_apt_dependencies.sh  kill_sim.sh  mem_profile.sh  run_benchmark.sh  run_bringup.sh  run_bt.sh  run_demo.sh  run_mock.sh  (+18 more)
tests/: test_configs.py  test_exploration.py  test_frontier_search.py  test_interfaces.py  test_platform_profiles.py  test_project_structure.py  test_rescue_arena.py  test_ros_nodes.py  test_unit_nodes.py
(+30 files in other folders)
