<?xml version="1.0"?>
<package format="3">
  <name>ia712_search_rescue</name>
  <version>0.0.1</version>
  <description>IA712 Project B - Autonomous Search and Rescue scaffold.</description>
  <maintainer email="team@example.com">IA712 Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
