<?xml version="1.0"?>
<package format="3">
  <name>rescue_robot</name>
  <version>0.1.0</version>
  <description>
    Autonomous search and rescue robot nodes.
    Includes: frontier exploration, victim detection, coverage evaluation,
    result export, RViz markers, Behavior Tree supervisor, and mock publishers.
  </description>
  <maintainer email="yimou.zhang@telecom-paris.fr">Yimou ZHANG</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
