<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>team_b_bringup</name>
  <version>0.1.0</version>
  <description>
    Single entry-point launch files, RViz/Nav2/SLAM configs for the IA712
    Project B Search &amp; Rescue stack.
  </description>

  <maintainer email="julien.gimenez@telecom-paris.fr">Julien GIMENEZ</maintainer>
  <maintainer email="hugo.fanchini@telecom-paris.fr">Hugo FANCHINI</maintainer>
  <maintainer email="paul.cintra@telecom-paris.fr">Paul CINTRA</maintainer>
  <maintainer email="yimou.zhang@telecom-paris.fr">Yimou ZHANG</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>turtlebot4_simulator</exec_depend>
  <exec_depend>turtlebot4_ignition_bringup</exec_depend>
  <exec_depend>turtlebot4_navigation</exec_depend>
  <exec_depend>turtlebot4_msgs</exec_depend>
  <exec_depend>irobot_create_msgs</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>explore_lite</exec_depend>
  <exec_depend>team_b_world</exec_depend>
  <exec_depend>team_b_exploration</exec_depend>
  <exec_depend>team_b_perception</exec_depend>
  <exec_depend>team_b_decision</exec_depend>
  <exec_depend>team_b_metrics</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
