<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>team_b_perception</name>
  <version>0.1.0</version>
  <description>
    Victim registry: listens to apriltag_ros detections, projects them
    from camera frame to map frame via TF2, deduplicates by tag ID, and
    publishes a MarkerArray + persistent JSON log.
  </description>

  <maintainer email="julien.gimenez@telecom-paris.fr">Julien GIMENEZ</maintainer>
  <maintainer email="hugo.fanchini@telecom-paris.fr">Hugo FANCHINI</maintainer>
  <maintainer email="paul.cintra@telecom-paris.fr">Paul CINTRA</maintainer>
  <maintainer email="yimou.zhang@telecom-paris.fr">Yimou ZHANG</maintainer>

  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
