<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>team_b_world</name>
  <version>0.1.0</version>
  <description>
    Gazebo "disaster" world and AprilTag SDF models for the IA712 Project B
    Search &amp; Rescue stack.
  </description>

  <maintainer email="julien.gimenez@telecom-paris.fr">Julien GIMENEZ</maintainer>
  <maintainer email="hugo.fanchini@telecom-paris.fr">Hugo FANCHINI</maintainer>
  <maintainer email="paul.cintra@telecom-paris.fr">Paul CINTRA</maintainer>
  <maintainer email="yimou.zhang@telecom-paris.fr">Yimou ZHANG</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_resource_path="${prefix}"/>
  </export>
</package>
